--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" type="image/png" href="image/shape04.png">
+        <link rel="shortcut icon" type="image/png" href="images/shape01.png">
         <title>Pixel Profile</title>
         <link rel="stylesheet" href="style.css">
         <link
@@ -18,7 +18,7 @@
                     <nav>
 
                         <div>
-                            <img class="img" src="image/circle.png">
+                            <img class="img" src="images/shape02.png">
                         </div>
                         <ul>
                             <li><button class="btn1 btna"
