--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                 <div class="nav">
                     <nav>
 
-                        <div>
-                            <img class="img" src="images/shape02.png">
-                        </div>
+                        <div class="circle"> </div>
                         <ul>
                             <li><button class="btn1 btna"
                                     onclick="window.location.href=
@@ -44,11 +42,21 @@
                                     </span></button></li>
                         </ul>
                     </nav>
+                    <div class="cursor"></div>
                 </div>
                 <div class="scetion1">
                     <h1>Hey there! I’m Supratim</h1>
                     <br>
-                    <h2>I’m new—I just moved to the <span>web development</span> a couple of days ago.</h2>
+                    <h2>I’m new—I just moved to the world of
+                        <br>
+                        <span>web development</span> a couple of days ago.</h2>
+                    <br>
+                    <h3>“I am the architect of my life; I build its foundation
+                        and choose its contents.”</h3>
+                </div>
+                <div class="section2">
+                    <button class="btn2"
+                        onclick="window.location.href='contacts.html';">About Me</button>
                 </div>
             </div>
         </header>
