--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" type="image/png" href="shape01.png">
+        <link rel="shortcut icon" type="image/png" href="images/shape01.png">
         <title>About Me</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="aboutme.css">
         <link
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"
             rel="stylesheet" />
@@ -48,5 +48,5 @@
                 </div>
                 </header>
                 </body>
-                <script src="script.js"></script>
+                <script src="aboutme.js"></script>
                 </html>
