--- a/aboutme.html
+++ b/aboutme.html
@@ -44,6 +44,8 @@
                         </ul>
                     </nav>
                     <div class="cursor"></div>
+                    <h1 style="margin: 30px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+                        PAGE UNDER CONSTRUCTION</h1>
                 </div>
                 </div>
                 </header>
