--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="images/shape01.png">
-        <title>Pixel Profile</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <link
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"
