--- a/aboutme.html
+++ b/aboutme.html
@@ -44,8 +44,13 @@
                         </ul>
                     </nav>
                     <div class="cursor"></div>
-                    <h1 style="margin: 30px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-                        PAGE UNDER CONSTRUCTION</h1>
+                    <h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                    margin-top: 40vh;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;">
+                        PAGE UNDER CONSTRUCTION
+                    </h1>
                 </div>
                 </div>
                 </header>
