--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="cursor"></div>
             </div>
             <div class="hero">
-                <img class="img" src="images/font.png">
+                <!-- <img class="img" src="images/teddy.png"> -->
             </div>
             <div class="scetion1">
                 <h1>Hellow!</h1>
